# dart_vlc

./: .gitignore  .gitmodules  .metadata  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml  subtitle.cpp
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
core/: .gitignore  CMakeLists.txt  core.cc  core.h
core/api/: api.cc  api.h  dart_manager.h  event_manager.h
core/broadcast/: broadcast.cc  broadcast.h  broadcast_configuration.h
core/chromecast/: chromecast.cc  chromecast.h
core/devices/: device.h  devices.cc  devices.h
core/equalizer/: equalizer.cc  equalizer.h
core/media_source/: media.cc  media.h  media_source.h  playlist.cc  playlist.h
core/player/: player.cc  player.h  player_state.cc  player_state.h
core/record/: record.cc  record.h
core/utils/: instance_handler.h
dartvlc/: .gitignore  CMakeLists.txt  base.h  broadcast.h  broadcast.hpp  chromecast.h  chromecast.hpp  device.h  device.hpp  devices.hpp  equalizer.h  equalizer.hpp  main  main.cc  main.cpp  main.hpp  player.h  player.hpp  record.h  record.hpp
dartvlc/api/: api.cc  api.h  callbackmanager.h  dartmanager.h  eventmanager.h
dartvlc/internal/: events.h  events.hpp  getters.h  getters.hpp  internal.h  internal.hpp  setters.h  setters.hpp  state.h  state.hpp
dartvlc/media_source/: base.h  media.h  playlist.h
dartvlc/mediasource/: media.h  media.hpp  mediasource.h  mediasource.hpp  playlist.h  playlist.hpp
example/: .metadata  README.md  pubspec.yaml
example/.github/workflows/: ci.yml
example/ios/: Podfile
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/: Podfile
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: DebugProfile.entitlements  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp
ffi/: .gitignore  CHANGELOG.md  CreateSharedLibrary.sh  README.md  example.dart  main.dart  pubspec.yaml
ffi/lib/: dart_vlc.dart  dart_vlc_ffi.dart
ffi/lib/source/: typedefs.dart
ffi/lib/source/internal/: dynamiclibrary.dart
ffi/lib/source/internal/typedefs/: callback.dart  player.dart
ffi/lib/src/: broadcast.dart  chromecast.dart  device.dart  equalizer.dart  player.dart  record.dart
ffi/lib/src/enums/: equalizerMode.dart  mediaSourceType.dart  playlistMode.dart  playlist_mode.dart
ffi/lib/src/internal/: dynamiclibrary.dart  ffi.dart  initializer.dart
ffi/lib/src/internal/typedefs/: broadcast.dart  callback.dart  chromecast.dart  devices.dart  equalizer.dart  media.dart  player.dart  record.dart
ffi/lib/src/mediaSource/: media.dart  mediaSource.dart  playlist.dart
ffi/lib/src/media_source/: media.dart  media_source.dart  playlist.dart
ffi/lib/src/playerState/: playerState.dart
ffi/lib/src/player_state/: player_state.dart
ffi/native/: callbackmanager.hpp  dart_vlc.cpp  eventmanager.hpp  main.cpp
ffi/source/: CMakeLists.txt  callbackmanager.hpp  eventmanager.hpp  main.cpp
ffi/source/dart_vlc/: player.hpp
ffi/test/: media_test.dart
ios/: dart_vlc.podspec
ios/Classes/: DartVlcPlugin.swift
lib/: channel.dart  dart_vlc.dart  flutter_vlc.dart
lib/src/: audioPlayer.dart  broadcast.dart  channel.dart  chromecast.dart  controls.dart  device.dart  equalizer.dart  hwnd.dart  player.dart  record.dart  video.dart
lib/src/audioPlayerState/: audioPlayerState.dart
lib/src/audioSource/: audio.dart  audioSource.dart  playlist.dart
lib/src/enums/: audioSourceType.dart  audioType.dart  mediaSourceType.dart  mediaType.dart  playlistMode.dart
lib/src/experimental/: video.dart
lib/src/mediaSource/: media.dart  mediaSource.dart  playlist.dart
lib/src/playerState/: playerState.dart
lib/src/widgets/: controls.dart  native_video.dart  video.dart
linux/: .gitignore  CMakeLists.txt  dart_vlc_plugin.cc
linux/include/dart_vlc/: dart_vlc_plugin.h  dart_vlc_video_outlet.h
linux/include/vlcpp/: RendererDiscoverer.hpp  structures.hpp
macos/: dart_vlc.podspec
macos/Classes/: DartVlcPlugin.h  DartVlcPlugin.m  DartVlcPlugin.swift  VideoOutlet.h  VideoOutlet.mm
macos/src/dartvlc/: broadcast.hpp  chromecast.hpp  device.hpp  equalizer.hpp  main.hpp  player.hpp  record.hpp
macos/src/dartvlc/internal/: events.hpp  getters.hpp  internal.hpp  setters.hpp  state.hpp
macos/src/dartvlc/mediasource/: media.hpp  mediasource.hpp  playlist.hpp
macos/src/ffi/native/: callbackmanager.hpp  dart_vlc.cpp  eventmanager.hpp
macos/src/vlc/: libvlc_version.h
macos/src/vlcpp/: MediaDiscoverer.hpp  Picture.hpp  common.hpp  structures.hpp  vlc.hpp
research/ffi/: main.dart
research/ffi/source/: .gitignore  main.cpp
research/ffi/source/dart_vlc/internal/: events.hpp  internal.hpp
research/ffi/source/dart_vlc/mediasource/: playlist.hpp
windows/: .gitignore  CMakeLists.txt  FlutterVLC.cpp  audioplayer.hpp  dart_vlc.cc  dart_vlc_plugin.cc  dart_vlc_plugin.cpp  flutter_vlc_plugin.cpp  main.cpp  player.hpp  video_outlet.cc  video_outlet.cpp  video_outlet.h  video_outlet.hpp  win32_window.cc
windows/audiosource/: audio.hpp  audiosource.hpp  playlist.hpp
windows/include/: FlutterVLC.h  flutter_types.hpp
windows/include/dart_vlc/: dart_vlc_plugin.h  win32_window.h
windows/internal/: events.hpp  getters.hpp  internal.hpp  setters.hpp  state.hpp
windows/mediasource/: media.hpp  mediasource.hpp
